# RDCtoVkCpp

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
application/: CMakeLists.txt  SpvCompiler.cpp  SpvCompiler.h  VApp.cpp  VApp.h
cmake/: attach_fg.cmake  compilers.cmake  download_spirvcross.cmake  find_devenv.cmake
converter/: CMakeLists.txt  Common.h  RdCaptureReader.cpp  RdCaptureReader.h  main.cpp
converter/Utils/: BasicTypesConverter.h  NameSerializer.cpp  NameSerializer.h
converter/Vulkan/: ResRemapper.cpp  ResRemapper.h  VulkanConverter.cpp  VulkanConverter.h  VulkanFnToCpp.h
generator/: CMakeLists.txt  GenChunkParser.cpp  GenEnumToString.cpp  GenFormatHelpers.cpp  GenListenerInterface.cpp  GenRawVulkanCalls.cpp  GenStructToString.cpp  GenStructTypeHelpers.cpp  Generator.cpp  Generator.h  HeaderParser.cpp  MarkRequiredTypes.cpp  StringParser.cpp  StringParser.h
tests/application/: CMakeLists.txt  main.cpp
